[package]
name = "solana-fee"
description = "Solana Fee"
documentation = "https://docs.rs/solana-fee"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
