[package]
name = "solana-fee"
documentation = "https://docs.rs/solana-fee"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
solana-svm-transaction = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench_fee"
harness = false
