[package]
name = "metrics_reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
solana-metrics = { path = "../metrics", version = "1.11.3" }
metrics_reporter_derive = { path = "metrics_reporter_derive", version = "0.1.0" }