[package]
name = "solana-metrics-reporter"
version = "1.11.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
solana-metrics = { path = "../metrics", version = "1.11.3" }
solana-logger = { path = "../logger", version = "=1.11.3" }
solana-metrics-reporter-derive = { path = "metrics_reporter_derive", version = "=1.11.3" }