[package]
name = "agave-transaction-ffi"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-svm-transaction = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
