[package]
name = "transaction-scheduler-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "env"] }
bincode = "1.3.3"
crossbeam-channel = "0.5"
itertools = "0.10.3"
log = "0.4.17"
rand = "0.8.5"
solana-core = { path = "../core" }
solana-logger = { path = "../logger" }
solana-measure = { path = "../measure" }
solana-perf = { path = "../perf" }
solana-runtime = { path = "../runtime" }
solana-sdk = { path = "../sdk" }