[package]
name = "agave-transaction-view"
description = "Agave TranactionView"
documentation = "https://docs.rs/agave-transaction-view"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
